updated the html tests (2)
Signed-off-by: Peter Staar <taa@zurich.ibm.com>

--- a/tests/data/html/real_example_01.html
+++ b/tests/data/html/real_example_01.html
@@ -284,7 +284,7 @@
 
 
 
-<div id="app" data-search-api="test.api" data-gmap-api-key="AIzaSyAEffJTT7eVPBJK0Peuwz2E-aLzl7nKIUo" data-recaptcha-key="6LfAFAAdAAAAAI6fQL_one-9V9xf3p96TBbWExGS" data-enel-data-layer="{&#34;pagename&#34;:[&#34;en&#34;,&#34;azienda&#34;,&#34;storie&#34;,&#34;progetti-innovativi-elettrificazione-rinnovabili&#34;],&#34;pagetype&#34;:&#34;article&#34;,&#34;areatype&#34;:&#34;company&#34;,&#34;language&#34;:&#34;en&#34;}" data-site="com" data-aria-flk='{
+<div id="app" data-search-api="test.api" data-recaptcha-key="6LfAFAAdAAAAAI6fQL_one-9V9xf3p96TBbWExGS" data-enel-data-layer="{&#34;pagename&#34;:[&#34;en&#34;,&#34;azienda&#34;,&#34;storie&#34;,&#34;progetti-innovativi-elettrificazione-rinnovabili&#34;],&#34;pagetype&#34;:&#34;article&#34;,&#34;areatype&#34;:&#34;company&#34;,&#34;language&#34;:&#34;en&#34;}" data-site="com" data-aria-flk='{
         "pageDotAriaLabel":"Page dot %n",
         "previousAriaLabel":"Previous",
         "nextAriaLabel":"Next"
