--- a/tests/data/html/accordion_test.html
+++ b/tests/data/html/accordion_test.html
@@ -18,7 +18,7 @@
                         </div>
                         <div class="panel-collapse collapse" id="accordion-36h0kkk" role="tabpanel" aria-labelledby="accordion-36h0kkk">
                             <div class="panel-body">
-                                <p>You can download your statement from the online banking portal. Navigate to "Accounts" → "Statement" in the menu, select your account and time period, then click "Download" and choose the digital signature format.</p>
+                                <p>You can download your statement from the online banking portal..</p>
                                 <div class="keywords hidden">Account Information FAQ</div>
                             </div>
                         </div>
@@ -31,7 +31,7 @@
                         </div>
                         <div class="panel-collapse collapse" id="accordion-36h1kkk" role="tabpanel" aria-labelledby="accordion-36h1kkk">
                             <div class="panel-body">
-                                <p>You can update your contact details through the online banking portal. Go to "Settings" → "Personal Information" and edit your contact details as needed.</p>
+                                <p>You can update your contact details through the online banking portal..</p>
                                 <div class="keywords hidden">Account Information FAQ</div>
                             </div>
                         </div>
