--- a/tests/data/groundtruth/docling_v2/word_tables.docx.html
+++ b/tests/data/groundtruth/docling_v2/word_tables.docx.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="icon" type="image/png"
-    href="https://ds4sd.github.io/docling/assets/logo.png"/>
+    href="https://docling-project.github.io/docling/assets/logo.png"/>
     <meta charset="UTF-8">
     <title>
     Powered by Docling
